# reading-source-code-of-nginx-1.19.10

./: .gitignore  CMakeLists.txt  README.md
articles/01-Nginx-Data-Structure/: README.md
conf/: nginx.conf
objs/: Makefile  autoconf.err  ngx_auto_config.h  ngx_modules.c
src/core/: nginx.c  ngx_connection.c  ngx_connection.h  ngx_cycle.c  ngx_cycle.h  ngx_hash.h  ngx_list.c  ngx_list.h  ngx_queue.c  ngx_rbtree.h  ngx_string.h  ngx_times.c  ngx_times.h
src/event/: ngx_event.c  ngx_event.h  ngx_event_accept.c  ngx_event_posted.h  ngx_event_timer.c  ngx_event_timer.h
src/event/modules/: ngx_epoll_module.c
src/os/unix/: ngx_daemon.c  ngx_process.c  ngx_process_cycle.c
